test/Fail/Fixities.err
test/Fail/Fixities.agda:6.1-6: error: [CustomBackendError]
agda2hs: Invalid fixity 8.5 for operator _<+>_
